minor updates for SCOREC s/w in stellar, traverse, and centos7

--- a/doc/mesh-gen.tex
+++ b/doc/mesh-gen.tex
@@ -722,6 +722,6 @@ See \texttt{readme.collapse} for detailed instructions and trouble shooting tips
 
 \subsubsection{Verification}
 
-The program \texttt{check\_smb} investigates an input mesh and prints any invalid aspects of the mesh. At the end, the mesh size (the number of global, local, and owned entities per dimension) is printed. 
+The program \texttt{check\_smb} investigates an input mesh and prints any invalid aspects of the mesh. It prints out the mesh size (the number of global, local, and owned entities per dimension) at the end. 
 
 In order to run, do \texttt{"mpirun -np N ./check\_smb input-mesh(.smb)"}.
