Added density floors for ions and electrons

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -1748,7 +1748,11 @@ In all cases, the angular velocity is then determined by:
  \texttt{iset\_ti\_floor} & 0 & 1: do not let ti drop below ti\_floor \\
   \texttt{ti\_floor}	   & 0 & minimum value for ti when iset\_ti\_floor=1 \\
 
+ \texttt{iset\_ne\_floor} & 0 & 1: do not let ne drop below ne\_floor \\
+  \texttt{ne\_floor}	   & 0 & minimum value for ne when iset\_ne\_floor=1 \\
 
+ \texttt{iset\_ni\_floor} & 0 & 1: do not let ni drop below ni\_floor \\
+  \texttt{ni\_floor}	   & 0 & minimum value for ni when iset\_ni\_floor=1 \\
 
 
 
