Minor updates to documentation

--- a/doc/M3DC1.tex
+++ b/doc/M3DC1.tex
@@ -40,64 +40,19 @@
 %\usepackage{graphicx}
 %\usepackage[usenames]{color}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{The M3D-C$^{1}$ User's Guide}
+\title{The M3D-C1 User's Guide}
 
-\author{-- VERSION 0.1 --\\
-\\
-PPPL M3DC1 Team \\
+\author{
+M3D-C1 Team \\
 RPI SCOREC}
+
+\date{\today}
 
 \begin{document}
 
 \maketitle
 
-
 \newpage
-
-\newpage
-***************     LICENSE     ***************
-\\
-\\
-Copyright (c) 2022 PPPL
-All rights reserved.
-\newline
-\newline
-
-SS: PLEASE FILL OUT THIS PAGE\\
-\newline
-Redistribution and use in source and binary forms, with or without
-modification, are permitted provided that the following conditions are met:
-
-\begin{itemize}
-\item Redistributions of source code must retain the above copyright notice,
-  this list of conditions and the following disclaimer.
-
-\item Redistributions in binary form must reproduce the above copyright notice,
-  this list of conditions and the following disclaimer in the documentation
-  and/or other materials provided with the distribution.
-
-\item Redistributions in binary form must reproduce the above copyright notice,
-  this list of conditions and the following disclaimer in the documentation
-  and/or other materials provided with the distribution.
-\end{itemize}
-
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
-AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
-IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
-FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
-DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
-SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
-CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
-OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-\newline
-\newline
-Questions to jardin@pppl.gov\\
-Derived from the OSI 3-clause BSD
-\newpage
-\newpage
-
 \tableofcontents
 \newpage
 
@@ -124,7 +79,7 @@ Derived from the OSI 3-clause BSD
 
 % Bibliography
 \bibliographystyle{plain}
-\bibliography{m3dc1.bib}
+\bibliography{m3dc1}
 
 \appendix
 \include{idl-postproc}
