--- a/doc/output.tex
+++ b/doc/output.tex
@@ -112,7 +112,7 @@ each shape function within the given mesh element.
 
 The field $\phi$ at the coordinate system $(\xi,\eta,\zeta)$ local to the mesh element is given by
 \[ 
-  \phi(\xi,\eta,\zeta) = \sum_{j=0}^{J} \sum_{i=1}^{20} a_{i + 4(j-1)} \xi^{m_i} \eta^{n_i} \zeta^j
+  \phi(\xi,\eta,\zeta) = \sum_{j=0}^{J} \sum_{i=1}^{20} a_{i + 20j} \xi^{m_i} \eta^{n_i} \zeta^j
 \]
 where
 \begin{eqnarray*}
