--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -1142,9 +1142,17 @@ and the truncation error is
   $\grad{p_e}$ terms in Ohm's law (electron form).  2: ion form (not
   recommended)  3: parallel pressure gradient in Ohm's law only
   (not recommended) \\
-  \texttt{ibootstrap} & 0 & 1: include bootstrap current \\
-  \texttt{ibootstrap\_model} & 0 & 1: J\_BS = alpha F <p,psi> B \\
-  \texttt{bootstrap\_alpha} & 0 & alpha parameter in bootstrap current model \\
+  \texttt{ibootstrap} & 0 & 1: When using bootstrap coeeficients as a function of $\psi$; \\
+                      &   & 2: When using bootstrap coeeficients as a function of $T_e$ \\
+  \texttt{ibootstrap\_model} & 0 & 1: Sauter (with eqsubtract = 0/1); \\
+                             &   & 2: Redl (with eqsubtract = 0/1); \\
+                             &   & 3: Sauter Model (with eqsubtract = 0); \\
+                             &   & 4: Redl Model (with eqsubtract = 0) \\
+  \texttt{ibootstrap\_map\_te} & 0 & 1: Map bootstrap coefficients with respect to Te
+  (used for stellarator cases). This setting is to be used with ibootstrap: 2 and 
+  ibootstrap$\_$model: 3 or 4\\
+  \texttt{ibootstrap\_regular} & 1e-8 & regularization term used in bootstrap current calculations \\
+  \texttt{bootstrap\_alpha} & 1 & Amplification factor for bootstrap current \\
   \texttt{imp\_bf} & 0 & 1: include implicit equation for f (recommended for
   3D and 2D complex) \\
   \texttt{nosig} & 0 & 1: drop sigma terms from momentum equation \\
