--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -1142,9 +1142,9 @@ and the truncation error is
   $\grad{p_e}$ terms in Ohm's law (electron form).  2: ion form (not
   recommended)  3: parallel pressure gradient in Ohm's law only
   (not recommended) \\
-  \texttt{ibootstrap} & 0 & 1: Using bootstrap coeeficients as a function of $\psi$; \\
-                      &   & 2: Using bootstrap coeeficients as a function of $T_e$ \\
-                      &   & 3: Using bootstrap coeeficients as a function of $\hat{T}=1-T_e/T_e_{max}$, coefficients are updated within M3D-C1 \\
+  \texttt{ibootstrap} & 0 & 1: Using bootstrap coefficients as a function of $\psi$; \\
+                      &   & 2: Using bootstrap coefficients as a function of $T_e$ \\
+                      &   & 3: Using bootstrap coefficients as a function of $\hat{T}=1-T_e/T_e_{max}$, coefficients are updated within M3D-C1 \\
   \texttt{ibootstrap\_model} & 0 & 1: Sauter (with eqsubtract = 0/1); \\
                              &   & 2: Redl (with eqsubtract = 0/1); \\
                              &   & 3: Sauter Model (with eqsubtract = 0); \\
